--- a/css/main.css
+++ b/css/main.css
@@ -121,12 +121,15 @@ textarea {
    .container {
     display: flex;
     flex-direction: column;
-    align-items: stretch;
+    /* align-items: stretch;
     justify-content: flex-start;
-    /* justify-content: flex-end; */
-    width: 100%;
-    /* pointer-events: none; */
 
+    justify-content: stretch;
+    justify-content: space-between; */
+    justify-content: center;
+    width: 100%;
+    height: 100vh;
+    /* pointer-events: none; */
 
 
     /* border: 2px red dashed; */
@@ -223,7 +226,9 @@ box-shadow:
 
 border-radius: .3em;
 padding: 2%;
-margin-top:2%;
+/* margin-top:2%;
+margin-bottom:2%; */
+height: 80vh;
 
   }
 
