--- a/css/main.css
+++ b/css/main.css
@@ -199,7 +199,9 @@ padding: .07em;
 display: flex;
 flex-direction: row;
 justify-content: space-between;
-margin-bottom: 6%;
+/* margin-bottom: 9%; */
+padding-bottom: 9%;
+/* border: 1px red dashed; */
 
 }
 
@@ -243,6 +245,15 @@ height: 80vh;
     border-radius: .2em;
   }
   
+
+  .pfdSizeContainer {
+
+/* /////this is the DESKTOP */
+    margin-bottom: 0.1%;
+    padding-bottom: 0%;
+
+    
+    }
   
 }
 
