--- a/css/main.css
+++ b/css/main.css
@@ -119,11 +119,25 @@ textarea {
 .bold {
 font-weight: 600;
 font-style: italic;
+text-align: right;
+text-anchor: end;
 /* background-color  :whitesmoke; */
 
 }
 
+.plotLabel{
 
+font-size: .7em;
+/* color: white;
+ */
+font-style: italic;
+}
+
+.svg {
+/* border: 1px solid black; */
+/* background-color: white; */
+
+}
    .container {
     display: flex;
     flex-direction: column;
@@ -214,8 +228,8 @@ padding-bottom: 9%;
 .pfdSize {
   font-weight: 700;
   font-size: .7em;
-
-
+background-color: white;
+border:1px black;
 }
 
 
@@ -234,14 +248,17 @@ box-shadow:
 0 100px 80px rgba(0, 0, 0, 0.12);
 
 border-radius: .3em;
-padding: 2%;
-/* margin-top:2%;
-margin-bottom:2%; */
+padding: 3%;
+ margin-top:4%;
+/* margin-bottom:2%;  */
 height: 80vh;
+/* justify-content: top; */
 
   }
 
-
+p.textSummary{
+  /* margin: 3.2%; */
+}
 
   .pfdSize {
     font-weight: 700;
@@ -265,11 +282,41 @@ height: 80vh;
 
 
   
+@keyframes inputGlow {
+ 0% {
+    width: 44px;
+    height: 44px;
+    background: #ffffff;
+    border: 1px solid #000000;
+    opacity: 1;
+
+
+  }
+  100% {    width: 76px;
+    height: 76px;
+    background: #ffffff;
+    border: 1px solid #a30a0a;
+    opacity: .1;
+  
+  }
+
+    /* 100% {    width: 44px;
+      height: 44px;
+      background: #ffffff;
+      border: 1px solid #000000;
+    opacity: 1;
+    } */
+
+
+}
+
+
   input[type=range] {
     width: 100%;
     margin: 20.8px 0;
     background-color: transparent;
     -webkit-appearance: none;
+
 
   }
   input[type=range]:focus {
@@ -277,9 +324,11 @@ height: 80vh;
   }
   input[type=range]::-webkit-slider-runnable-track {
     background: #000000;
+    background: #333333;
+    /* background: lightgreen; */
     border: 0;
     width: 100%;
-    height: 2.4px;
+    height: 4.4px;
     cursor: pointer;
   }
   input[type=range]::-webkit-slider-thumb {
@@ -291,7 +340,11 @@ height: 80vh;
     border-radius: 50px;
     cursor: pointer;
     -webkit-appearance: none;
-    transition: all .3s ease;
+     transition: all .3s ease; 
+
+  
+
+
   }
   input[type=range]:focus::-webkit-slider-runnable-track {
     background: #0a0a0a;
@@ -384,6 +437,8 @@ height: 80vh;
 
     fill: #ff3300;
     rx: 3;
+    fill: #444;
+    fill:skyblue;
   }
 
 
