--- a/css/main.css
+++ b/css/main.css
@@ -216,8 +216,8 @@ padding: .07em;
 
   font-weight: 100;
   font-size: .8em;
-  padding-bottom: 1em;
-  /* padding-top: 2em; */
+  /* padding-bottom: 1em; */
+  padding-top: 1em;
   font-style: italic;
 
 }
@@ -279,9 +279,6 @@ height: 90vh;
 
   }
 
-p.textSummary{
-  /* margin: 3.2%; */
-}
 
   .pfdSize {
     font-weight: 700;
@@ -470,6 +467,7 @@ p.textSummary{
 
 
   /* min-height: 60vh; */
+  /* margin-top:0px; */
 }
 
 
