--- a/css/main.css
+++ b/css/main.css
@@ -252,8 +252,8 @@ padding: .07em;
   font-weight: 100;
   font-size: .7em;
   /* padding-bottom: 1em; */
-  margin-top: 5em;
-  font-style: italic;
+  /* margin-top: 5em; */
+  /* font-style: italic; */
 }
 
 .circle {
