--- a/css/main.css
+++ b/css/main.css
@@ -254,6 +254,7 @@ padding: .07em;
   /* padding-bottom: 1em; */
   /* margin-top: 5em; */
   /* font-style: italic; */
+  border: 1px red solid;
 }
 
 .circle {
